--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,8 @@ cache:
   directories:
     - node_modules
     - docs/site/node_modules
+install:
+  - npm install
+  - cd docs/site && npm install
 script:
   - ./scripts/run-travis-tests.sh
